--- a/style/style.css
+++ b/style/style.css
@@ -25,6 +25,7 @@ img {
 }
 
 .fa-solid {
+    color: #8697a0;
     font-size: 1.2rem;
     margin-left: 2.5px;
     margin-right: 2.5px;
@@ -80,13 +81,15 @@ body {
 
 .sidebar {
     width: 40%;
-    border-right: solid 1px lightslategray;
+    border-right: solid 1px #313e45;
+    background: #111c22;    
 }
 
 .sidebar .nav_functions {
     height: var(--nav-height);
     padding: .5rem;
-
+    background: #212d33;
+    color: #8697a0;
 }
 
 
@@ -95,14 +98,14 @@ body {
 .sidebar .nav_notifications {
     height: var(--nav-height);
     padding: .5rem;
-    color: black;
+    color: #8697a0;
     display: flex;
     align-items: center;
-    background: #8EDAFC;
+    border-bottom: solid 1px #313e45;
+
 }
 
 .nav_notifications .fa-solid {
-    color: #8EDAFC;
     padding: .5rem;
     background: white;
     border-radius: 50%;
@@ -110,6 +113,27 @@ body {
 }
 
 .nav_notifications a {
-    color: lightslategray;
+    color: white;
 }
+
+
+/* NAV_SEARCH */
+
+.sidebar .nav_search {
+    height: var(--nav-height);
+    padding: .5rem;
+    border-bottom: solid 1px #313e45;
+}
+
+.nav_search input {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    padding: .5rem;
+    color: #8697a0;
+    background: #202d33;
+    border: none;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, FontAwesome;
+}
+
 
