--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,10 @@
 :root {
     --nav-height: 3.5rem;
-    --chat-height: 4.5rem
+    --chat-height: 4.5rem;
+    --dark-gray: #111c22;
+    --gray: #212d33;
+    --light-gray: #8697a0;
+    --input-gray: #2a3a42;
 }
 
 /* Common style */
@@ -25,8 +29,9 @@ img {
     vertical-align: middle;
 }
 
-.fa-solid {
-    color: #8697a0;
+.fa-solid,
+.fa-regular {
+    color: var(--light-gray);
     font-size: 1.2rem;
     margin-left: 2.5px;
     margin-right: 2.5px;
@@ -38,6 +43,13 @@ img {
     align-items: center;
 }
 
+input {
+    border-radius: 10px;
+    padding: .5rem;
+    color: var(--light-gray);
+    background: var(--input-gray);
+    border: none;
+}
 
 /* HTML */
 
@@ -73,7 +85,7 @@ body {
     max-width: 1600px;
     margin: 1rem auto;
     display: flex;
-    background: #212D33;
+    background: var(--dark-gray);
 }
 
 
@@ -82,14 +94,13 @@ body {
 .sidebar {
     width: 40%;
     border-right: solid 1px #313e45;
-    background: #111c22;    
 }
 
 .sidebar .nav_functions {
     height: var(--nav-height);
     padding: .5rem;
-    background: #212d33;
-    color: #8697a0;
+    background: var(--gray);
+    color: var(--light-gray);
 }
 
 
@@ -98,7 +109,7 @@ body {
 .sidebar .nav_notifications {
     height: 4rem;
     padding: .5rem;
-    color: #8697a0;
+    color: var(--light-gray);
     display: flex;
     align-items: center;
     border-bottom: solid 1px #313e45;
@@ -127,12 +138,7 @@ body {
 
 .nav_search input {
     width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    padding: .5rem;
-    color: #8697a0;
-    background: #202d33;
-    border: none;
+    height: 100%;   
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, FontAwesome;
 }
 
@@ -170,7 +176,7 @@ body {
 .chat .text .time,
 .chat .text .last_msg_sent {
     font-size: 14px;
-    color: #8697a0;
+    color: var(--light-gray);
 }
 
 .name {
@@ -179,3 +185,67 @@ body {
     color: white;
 }
 
+
+/* CHAT AREA */
+
+.chat_area {
+    width: 60%;
+    position: relative;
+}
+
+/* NAV CHAT */
+
+.nav_chat,
+.footer_chat {
+    height: var(--nav-height);
+    padding: .5rem;
+    background: #212d33;
+    color: var(--light-gray);
+    position: absolute;
+    left: 0;
+    right: 0;
+}
+
+.nav_chat {
+    top: 0;
+}
+
+.nav_chat .user {
+    display: flex;
+    align-items: center;
+}
+
+.user img {
+    margin-right: .5rem;
+}
+
+.user .name {
+    padding: 0;
+}
+
+
+/* CHAT MSG BODY */
+
+.chat_msg_body {
+    height: calc(100% - var(--nav-height) * 2);
+    margin-top: var(--nav-height);
+    background-image: url(../img/mine_dark.jpg);
+    background-size: cover;
+}
+
+/* FOOTER CHAT */
+
+.footer_chat {
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+}
+
+.footer_chat input {
+    width: 80%;
+}
+
+.footer_chat button {
+    width: 10%;
+    margin: auto;
+}
