--- a/style/style.css
+++ b/style/style.css
@@ -1,11 +1,19 @@
 :root {
-    --nav-height: 3.5rem;
+    --nav-height: 4.5rem;
     --chat-height: 4.5rem;
     --dark-gray: #111c22;
     --gray: #212d33;
     --light-gray: #8697a0;
     --input-gray: #2a3a42;
 }
+
+/* HTML */
+
+html {
+    color: whitesmoke;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 
 /* Common style */
 
@@ -49,15 +57,9 @@ input {
     color: var(--light-gray);
     background: var(--input-gray);
     border: none;
+    height: 3rem;
+    align-self: center;
 }
-
-/* HTML */
-
-html {
-    color: whitesmoke;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
 
 /* BODY */
 
@@ -92,7 +94,7 @@ body {
 /* SIDEBAR */
 
 .sidebar {
-    width: 40%;
+    width: 30%;
     border-right: solid 1px #313e45;
 }
 
@@ -131,19 +133,18 @@ body {
 /* NAV_SEARCH */
 
 .sidebar .nav_search {
-    height: var(--nav-height);
     padding: .5rem;
     border-bottom: solid 1px #313e45;
 }
 
 .nav_search input {
     width: 100%;
-    height: 100%;   
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, FontAwesome;
+    align-self: center;
 }
 
 
-/* CHAtS */
+/* CHATS */
 
 .sidebar .chats {
     height: calc(100% - 4rem - var(--nav-height) * 2);
@@ -164,8 +165,6 @@ body {
     width: 50px;
     margin-right: 1rem;
 }
-
-
 
 .chat .text {
     width: 100%;
@@ -188,7 +187,7 @@ body {
 /* CHAT AREA */
 
 .chat_area {
-    width: 60%;
+    width: 70%;
     position: relative;
 }
 
@@ -202,11 +201,13 @@ body {
     color: var(--light-gray);
     position: absolute;
     left: 0;
-    right: 0;
+    right: 0;    
 }
 
 .nav_chat {
     top: 0;
+    display: none;
+
 }
 
 .nav_chat .user {
@@ -229,9 +230,10 @@ body {
     height: calc(100% - var(--nav-height) * 2);
     margin-top: var(--nav-height);
     background-image: url(../img/mine_dark.jpg);
-    background-size: cover;
+    background-size: contain;
+    background-position: center;
     padding: 2rem;
-    display: flex;
+    display: none;
     flex-direction: column;
     gap: 2rem;
     overflow: auto;
@@ -258,8 +260,7 @@ body {
     position: relative;
 }
 
-.msg_received_time,
-.msg_sent_time {
+.msg_time {
     position: absolute;
     font-size: 10px;
     right: 3%
@@ -281,3 +282,16 @@ body {
     width: 10%;
     margin: auto;
 }
+
+
+
+
+.selected_contact {
+    background: #2a3a42;    
+}
+
+.chat_opened,
+.active_chat {
+    display: flex;
+}
+
