--- a/style/style.css
+++ b/style/style.css
@@ -270,8 +270,9 @@ body {
 
 .footer_chat {
     bottom: 0;
-    display: flex;
+    display: none;
     justify-content: center;
+
 }
 
 .footer_chat input {
@@ -284,7 +285,7 @@ body {
 }
 
 
-
+/* CLASSES FOR VUE */
 
 .selected_contact {
     background: #2a3a42;    
